crates/wac-parser/tests/resolution/fail/func-results-present.wac
import x: interface {
    f: func() -> string;
};

let i = new foo:bar { x };
